--- a/README
+++ b/README
@@ -7,42 +7,113 @@ Blogracy is a simple peer-to-peer social networking system, built on top of Bitt
 === Install ===
 
 The installation process is not yet streamlined. Essentially Blogracy runs as a Vuze
-plugin. In order to make it easier to try the project, we distribute the unmodified
-Vuze jars in the lib directory. Vuze also needs SWT and some native libraries (on
-OS X and Windows at least). Right now, in the libs there are the binary libs for OS X.
-It should suffice to add those for windows (see Vuze and Eclipse/SWT docs).
+plugin. We do not distribute Jars anymore.
 
-To run Vuze in an IDE, simply create a new configuration which adds the Vuze libs in the
-classpath.
-
-Vuze main class to run is: org.gudy.azureus2.ui.swt.Main
-Options to be passed to the JVM are:
-
--d32 -Dazureus.config.path=config  -Djava.library.path="lib/dll"  -Xmx128m -XstartOnFirstThread
+The build system uses Ant and Maven. If you have a working ant and maven
+installation things should be rather smooth. We basically use maven just for
+dependency management and ant for everything else.
 
 
--d32 and -XstartOnFirstThread are for OS X only and are needed (the first one only if
-you are using a 32bit version of SWT and binary libraries, like those we are using).
+== Maven Ant Tasks ==
+In order to have ant and maven work together, we use Maven Ant Tasks. Documentation
+is not extremely exhaustive. In principle you should not have to download Maven
+Ant Tasks: we have an ant target (mvn-ant-tasks-download)
+which downloads it automagically. Our system works with version 2.1.3.
 
-We assume that the working directory for the application is the root directory of Blogracy
-(the one with .gitignore and this file). So lib/dll is just the right directory (place in 
-that one the windows dll which you may need -- not the jars). 
+We have been reported cases where the download process did not succeed. A 
+maven-ant-tasks-2.1.3.jar is downloaded in the lib directory, but the file is
+broken. This is easy to veryfy with 
 
-Config is a directory where Vuze will save all its files and configurations. In order for
-Vuze to find the new plugin, it is needed that the output files of the compilation go into
-the plugins subdirectory of the config directory.
+unzip -t lib/maven-ant-tasks-2.1.3.jar
+
+If the file is broken, an error will occur. Manually downloading the file and
+placing it in the lib directory fixes the issue.
+
+=== Maven ===
+Maven should just work out of the box (if installed). Essentially we use maven
+ant tasks to have ant call the maven tasks necessary to download the relevant
+libraries (at the present moment velocity-engine, commons-cli, junit, log4j).
+
+Maven does not put stuff in the lib directory, but places them in its own
+local repository. See maven docs for more information. However, in Ant we
+have the proper value of the classpath to use which takes this into account.
+
+=== Blogracy.bat and Blogracy.sh ===
+
+Consequently, we can generate the blogracy.bat and blogracy.sh which are the
+preferred way to run the system. These files should be regenerated if maven
+upgrades its libraries versions or when something does not seem to work 
+properly. Therefore, they should not be edited by hand. It is ok to do it
+to try things, but remember, they will be re-generated. Please do not put
+them under version control, either.
+
+=== Vuze ===
+
+We use ant to download Vuze. We use the Vuze_4700.jar from the devs page.
+Again, should it be corrupted, feel free to manually download that and
+the sources package and place it in the lib directory. 
+
+==== Compile and Build  ====
+
+Should be taken care of by ant. Classfiles are placed in `build/config/plugins/blogracy'.
+We also place there relevant files (the Messages package and the plugin.properties
+file which is used by Vuze to load our plugin).
 
 It is not necessary to create a jar file, the classfiles suffice. However, the plugin.properties
 file must be there. Essentially the config directory must be something like
 
-+- config
++- build/config
    +- plugins
       +- blogracy
          - plugin.properties
          - it/unipr/aotlab/blogracy/*.class
+         - messages/Messages.properties
+
+==== Run ====
+We do not use GUI or SWT. Consequently we run the Vuze console version
+(see the --ui=console option in blogracy run scripts). We do not depend from
+STW, as a consequence. You do not need to have those installed. Running such 
+scripts from the GUI may not work. Use the Terminal, Luke!
+
+It is however important to tell Vuze that the config directory it shall use is
+`build/config' (because we deploy there our plugin). This is done with the
+-Dazureus.config.path=build/config option of the VM.
+
+The main class to run Vuze is org.gudy.azureus2.ui.common.Main. To have an idea,
+the command which is inside the blogracy.sh file built for my system is, at the
+present moment:
+
+```
+#!/bin/sh
+
+java -Xmx128m -Dazureus.config.path=build/config        \
+            -cp SOME_CLASSPATH                          \
+            org.gudy.azureus2.ui.common.Main            \
+                --ui=console
+'''
+
+The former is not a specification. Is just an example.
+
+It is still possible to have the thing run with a GUI. We do not have time
+to make it automated, though. Moreover, the plugin is meant to be used headless
+through a web-browser, and is consequently not necessary.
+
+Some information about the old GUI version may be found in old/README.
+It is utterly incomplete.
+
+=== IDE ===
+Most IDEs should play nice with Ant. Just pay attention to the notion of 
+Working Directory. Please do not commit your IDE specific stuff.
+
 
 === Authors ===
 
 The original core was written by Alan Nonnato as his master's theses project.
-Subsequent modifications have been made by Enrico Franchi and Michele Tomaiuolo.
+The code of the present versions is mostly written by Enrico Franchi and Michele Tomaiuolo.
 The project is currently maintained by Enrico Franchi and Michele Tomaiuolo.
+
+==== Contributors ====
+Enrico Franchi (efranchi@ce.unipr.it) [ core ]
+Michele Tomaiuolo (tomamic@ce.unipr.it) [ core ]
+Alan Nonnato () [ old core ]
+...
